# Mastermind

./: .gitignore  Mastermind.cabal  README.md  stack.yaml
src/: Control.hs  Main.hs  Model.hs  View.hs
src/Model/: Board.hs  Computer.hs
tests/: Common.hs  Test.hs
