name:                Mastermind
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Kyle Stadelmann
maintainer:          Kyle.Stadelmann@gmail.com
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Mastermind
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       vty, 
                       brick
  hs-source-dirs:      src
  other-modules:       View, 
                       Control,
                       Model, 
                       Model.Board,
                       Model.Computer
		       
  default-language:    Haskell2010
  ghc-options:       -W -threaded

test-suite tests
  default-language: Haskell98
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests,src
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       vty, 
                       brick,
                       mtl,
                       filepath,
                       QuickCheck,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       process
  ghc-options:       -W -threaded
  main-is:           Test.hs
  build-depends:     base >=4.9, process
